Add Doc in Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,7 @@
 % بسم الله الرحمن الرحیم
+
+% This problem set is part of Derby serie contests.
+
 \documentclass[12pt]{article}
 
 \usepackage[left=2cm, right=2cm, top=2cm]{geometry} % for setting the margins
