--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % بسم الله الرحمن الرحیم
 
-% This problem set is part of Derby serie contests.
+% This problem set is part of Derby serie contests. In Derby contests students split to two groups and compete. 
 
 \documentclass[12pt]{article}
 
