--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,8 @@
 % بسم الله الرحمن الرحیم
 
 % This problem set is part of Derby serie contests. In Derby contests students split to two groups and compete. 
+% This document is uploded to GitHub just to check integration rules of GitHub and Overleafe.
+
 
 \documentclass[12pt]{article}
 
