Push from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 % This document is uploded to GitHub just to check integration rules of GitHub and Overleafe.
 % Another line to make PR. 
 
+% what if we are working in overleaf
+
 \documentclass[12pt]{article}
 
 \usepackage[left=2cm, right=2cm, top=2cm]{geometry} % for setting the margins
